--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,8 @@ use_frameworks!
 platform :ios, '9.0'
 
 target 'ZebraSDK_Example' do
-  pod 'ZebraSDK', :path => '../'
+ pod 'ZebraSDK', :path => '../'
+  # pod 'ZebraSDK', '~> 0.3'
 
   target 'ZebraSDK_Tests' do
     inherit! :search_paths
